# PolaRise

./: .gitignore  CMakeLists.txt  Makefile  PolaRise  README.md  consts.cpp  dump.cpp  dump.hpp  game.cpp  game.hpp  hero.cpp  hero.hpp  level.cpp  level.hpp  main.cpp  rayTracing.cpp  rayTracing.hpp  tile.cpp  tile.hpp
FpsCounter/: fpsCounter.cpp  fpsCounter.h
GUI/BaseGUI/: BaseGUI.cpp  BaseGUI.h
GUI/Menu/: MenuGUI.cpp  MenuGUI.h
GUI/Pause/: PauseGUI.cpp  PauseGUI.h
Game/: sceneLoader.cpp  sceneLoader.h
Game/include/: consts.h  game.hpp  lantern.h  level.hpp  player.hpp  sceneLoader.h  tile.hpp
Game/src/: consts.cpp  dump.cpp  game.cpp  lantern.cpp  level.cpp  main.cpp  player.cpp  sceneLoader.cpp  tile.cpp
Levels/: Level_01 (copy).txt  Level_01.txt  Level_01_lightScene.txt
Levels/1/: level.txt  lightScene.txt
Levels/2/: level.txt  lightScene.txt
Levels/3/: level.txt
LightSystem/include/: emitterBehaviour.h  lightEmitter.h  lightScene.h  rayTracing.hpp
LightSystem/src/: emitterBehaviour.cpp  lightEmitter.cpp  lightScene.cpp  rayTracing.cpp
Menu/: Menu.cpp  Menu.h  MenuGUI.cpp  MenuGUI.h
Pause/: PauseGUI.h
SmartVector2/: SmartVector2f.cpp  SmartVector2f.h
include/: consts.h  dump.hpp  emitterBehaviour.h  game.hpp  hero.hpp  lantern.h  level.hpp  lightEmitter.h  lightScene.h  player.hpp  playerState.h  rayTracing.hpp  tile.hpp
shaders/: blur.frag  pixelate.frag  shadow.frag
src/: consts.cpp  dump.cpp  emitterBehaviour.cpp  game.cpp  hero.cpp  lantern.cpp  level.cpp  lightEmitter.cpp  lightScene.cpp  main.cpp  player.cpp  playerState.cpp  rayTracing.cpp  tile.cpp
util/: eMath.cpp  eMath.h
util/ResourceHolder/: resourceHolder.cpp  resourceHolder.h  resourceIdentifier.h
util/ResourceHolders/: resourceIdentifiers.h
util/ResourceHolders/ShaderHolder/: shaderHolder.cpp  shaderHolder.h
util/ResourceHolders/TextureHolder/: textureHolder.cpp  textureHolder.h
util/SmartVector2/: SmartVector2f.cpp
util/eMath/: eMath.cpp  eMath.h
